--- a/templates/users/create_user.html
+++ b/templates/users/create_user.html
@@ -2,6 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
+                <a href="http://localhost:8000/">Voltar</a>
                 <div class="section-heading">
                     <h2>Criar conta</h2>
                 </div>
