--- a/lojaparatudo/static/css/product_page.css
+++ b/lojaparatudo/static/css/product_page.css
@@ -10,6 +10,7 @@
 	 padding: 0;
 }
  body {
+	 margin: 0;
 	 width: 100%;
 	 height: 100%;
 	 font-family: "Open Sans", "Helvetica Neue", Helvetica, sans-serif;
@@ -253,7 +254,6 @@
 	 font-size: 1rem;
 	 display: block;
 	 margin: 0.5rem 0 0 1.2rem;
-	 text-style: italic;
 }
  @media (max-width: 43.75em) {
 	 blockquote cite {
