--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -34,15 +34,13 @@
           {% endif %}
             <li class="mr-3">
               <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="/create-product">Anunciar produto</a>
-            </li>
-            <li class="mr-3">
+              <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="{% url 'perfil' user.id %}">{{ user.username }}</a>
+              <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="{% url 'products_in_cart' user.id %}">Carrinho</a>
               <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="{% url 'logout' %}">Sair</a>
             </li>
           {% else %}
             <li class="mr-3">
               <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="/user/login">Entrar</a>
-            </li>
-            <li class="mr-3">
               <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="/user/create-user">Registrar</a>
             </li>
           {% endif %}
