--- a/templates/products/create-product.html
+++ b/templates/products/create-product.html
@@ -15,7 +15,7 @@
                     </div>
                     <div class="col-12">
                         <label for="file"><b>Preço</b></label>
-                        <input type="number" class="form-control" name="price" placeholder="Ex. 1000" required>
+                        <input type="number" min="0" step=".01" class="form-control" name="price" placeholder="Ex. 1000" required>
                     </div>
                     <div class="col-12 col-lg-3">
                         <label for="file"><b>Resumo do produto</b></label>
