--- a/templates/products/product-page.html
+++ b/templates/products/product-page.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="{% static 'css/product_page.css' %}">
 </head>
 
+{% include 'partials/_header.html' %}
+
 <body>
     <section >
         
-        <div style="display: flex;" class="container">
+        <div style="display: flex;" class="container mt-16">
           <div>
             <a type="button" style="background: #006eb5; border-radius: 4px; display: flex; flex-direction: row; justify-content: center; align-items: center; width: 150px; padding: 4px 16px; color: white; font-style: italic;" href="http://localhost:8000/">Página principal</a>
           </div>
@@ -20,8 +22,12 @@
             <img src="{{ product.photo.url }}" alt="Foto do produto" class="details-img--ball" />
           </div>
           <div class="col-7 details">
+            {% if user.is_authenticated %}
             <h1>Bom dia, {{ user.username }}</h1>
-            <h3>{{ product.name }}</h3>
+            {% else %}
+            <h1>Bom dia, convidado</h1>
+            {% endif %}
+            <h3 class="m-0">{{ product.name }}</h3>
             <p>{{ product.description }}</p>
             <p>Quem está vendendo esse produto é o usuário {{ product.product_owner }}.</p>
           </div>
@@ -37,7 +43,12 @@
         <div class="container">
           <h1>{{ product.product_resume }}</h1>
           <h2>{{ product.comment1 }}</h2>
-          <a href="buy-product/{{product.id}}" class="btn btn-transparent">Compre agora</a>
+          
+          <a style="min-width: 165.75px; max-width: 218.35; margin-right: 4px;" href="buy-product/{{product.id}}" class="btn btn-transparent">Compre agora</a>
+          <!-- Mensagem que precisa está logado para colocar no carrinho, solução provisória -->
+          {% if user.is_authenticated %}
+          <a href="{% url 'add_cart' product.id user.id%}" class="btn btn-transparent">Adicionar carrinho</a>
+          {% endif %}
           <h2>Por apenas R${{ product.price }}</h2>
         </div>
       </header>
@@ -45,7 +56,7 @@
       <section class="section--primary--alt">
         <div class="container">
           <h3>{{ product.comment2 }}</h3>
-          <p>{{ product.product_informations }}</p>
+          <p class="flex items-align justify-center">{{ product.product_informations }}</p>
         </div>
       </section>
       
