--- a/templates/products/product-page.html
+++ b/templates/products/product-page.html
@@ -30,6 +30,7 @@
             <h3 class="m-0">{{ product.name }}</h3>
             <p>{{ product.description }}</p>
             <p>Quem está vendendo esse produto é o usuário {{ product.product_owner }}.</p>
+            <p>Quantidade disponível: {{ product.quantity }}</p>
           </div>
           {% if user.id == product.product_owner.id %}
           <div>
@@ -84,21 +85,14 @@
         </div>
       </section>
       
-      <section class="text--center">
+      <section class="text--center bg-gray-200">
         <div class="container">
           <h3>Porque ainda está lendo?</h3>
           <a href="#" class="btn">Compre agora!</a>
         </div>
       </section>
       
-      <footer>
-        <div class="container">
-          <ul>
-            <h3>Para entrar em contato: {{ product.product_owner.email }}</h3>
-          </ul>
-          <p>&copy; 2021 oDOGB. Todos os direitos reservados.</p>
-        </div>
-      </footer>
+      {% include 'partials/_footer.html' %}
 </body>
 </html>
 
