Front-end de criar produto finalizado

--- a/templates/products/buy-product.html
+++ b/templates/products/buy-product.html
@@ -49,8 +49,8 @@
                         AddListId('{{product.id}}')
                     </script>
                     <label class="flex text-gray-600 mb-2 mr-0">
-                        <p>O preço total será de </p>  
-                        <p class="flex text-gray-600" id="result{{ product.id }}"></p>
+                        <p>O preço total será de</p>  
+                        <p class="flex text-gray-600 ml-1" id="result{{ product.id }}"></p>
                     </label>                   
                 </div>
                 <div class="text-center">
