--- a/templates/products/product-page.html
+++ b/templates/products/product-page.html
@@ -50,7 +50,7 @@
           {% if user.is_authenticated %}
           <a href="{% url 'add_cart' product.id user.id%}" class="btn btn-transparent">Adicionar carrinho</a>
           {% endif %}
-          <h2>Por apenas R${{ product.price }}</h2>
+          <h2 class="m-0">Por apenas R${{ product.price }}</h2>
         </div>
       </header>
       
